syntax = "proto3";

import "cardapio/def/cardapio.proto";

package cardapio.service;

service ICardapio {
    rpc criarItem(ICriarItemRequest) returns (ICriarItemResponse);
    rpc editarItem(IEditarItemRequest) returns (IEditarItemResponse);
    rpc removerItem(IRemoverItemRequest) returns (IRemoverItemResponse);
    rpc listarItem(IListarItemRequest) returns (IListarItemResponse);
}

message ICriarItemRequest {
    string nome = 1;
    string descricao = 2;
    cardapio.def.Categoria categoria = 3;
    string preco = 4;
}

message ICriarItemResponse {
    cardapio.def.IItemCardapio item = 1;
}

message IEditarItemRequest {
    string nome = 1;
    optional string novo_nome = 2;
    optional string descricao = 3;
    optional cardapio.def.Categoria categoria = 4;
    optional string preco = 5;
}

message IEditarItemResponse {
    cardapio.def.IItemCardapio item = 1;
}

message IRemoverItemRequest {
    string nome = 1;
}

message IRemoverItemResponse {
    cardapio.def.IItemCardapio item = 1;
}

message IListarItemRequest {
    optional cardapio.def.Categoria categoria = 1;
}

message IListarItemResponse {
    repeated cardapio.def.IItemCardapio item = 1; 
}