import { 
    ICardapio,
    ICriarItemRequest,
    ICriarItemResponse,
    IEditarItemRequest,
    IEditarItemResponse,
    IRemoverItemRequest,
    IRemoverItemResponse,
    IListarItemRequest,
    IListarItemResponse  
} from "../../../../../../protobuf/gen/cardapio/service/cardapio";

export {
    ICardapio,
    ICriarItemRequest,
    ICriarItemResponse,
    IEditarItemRequest,
    IEditarItemResponse,
    IRemoverItemRequest,
    IRemoverItemResponse,
    IListarItemRequest,
    IListarItemResponse 
};